feat: Hintable views in LinearLayout, Some style and animations on show or hide, and color on focus unfocus

--- a/Examples/build.gradle
+++ b/Examples/build.gradle
@@ -19,6 +19,6 @@ android {
 }
 
 dependencies {
-    compile project(':HintableViews')
+    compile project(':library')
     compile fileTree(dir: 'libs', include: ['*.jar'])
 }
